[package]
name = "discoid"
version = "0.0.3"
edition = "2021"
license = "MIT"
description = "Different types of generic Circular Buffers"
repository = "https://github.com/piot/discoid-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
